--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "15.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
